# wonderland

./: package-lock.json  package.json  svelte.config.js
garage/: CMakeLists.txt  constants.h  test.cpp  test2.cpp
garage/arithmetic/: montgomery.h
src/: app.html
src/icons/: files.svelte  index.ts  interface.svelte
src/lib/: stores.js
src/lib/Code/: Code.svelte  CodeObject.svelte  Codeblock.svelte  InternalCode.svelte  highlighter.js  languages.ts
src/lib/Code/grammars/: asm.js  bnf.js  c.js  cpp.js  http.js  index.js  pseudocode.js
src/lib/Elements/: Icon.svelte  Image.svelte  Link.svelte  Title.svelte  Tooltip.svelte
src/lib/Layout/: Header.svelte
src/lib/List/: BulletList.svelte  EnumList.svelte  ListItem.svelte
src/lib/Markup/: Comment.svelte  Heading.svelte  P.svelte  Par.svelte  Subheading.svelte
src/lib/Math/: Math.svelte  math.ts
src/lib/Stencils/Blocks/: Block.svelte  Definition.svelte  Fact.svelte  Proof.svelte  Statement.svelte  Theorem.svelte
src/routes/: +layout.svelte
src/routes/(knowledge)/: +layout.svelte
src/routes/(knowledge)/sorting/: +page.svelte
src/routes/(meta)/writing/: +page.svelte  WritingCode.svelte
src/routes/scenario/: +layout.svelte  +page.svelte  Category.svelte  Chapter.svelte  Item.svelte
src/routes/test/: +page.svelte
static/: global.css
visualization/: __init__.py  bases.py  colors.py  hexvf.py  style.mplstyle  test.py  visualization.py
visualization/core/: constants.py
visualization/core/grids/: hexagonal.py
visualization/draw/: abstract.py  mpl.py  svg.py
visualization/plots/: vector.py
(+148 files in other folders)
